--- a/FCOApplication_Back/app/src/main/res/values/strings.xml
+++ b/FCOApplication_Back/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="button_red">Red Pill</string>
     <string name="button_blue">Blue Pill</string>
     <string name="hello_world">Hello Kpleus</string>
+
+    <string name="nameLabel">Name : &#160;</string>
+    <string name="phoneLabel">Phone : &#160;</string>
 </resources>
